# synapse-adm

./: .gitignore  Cargo.toml  README.md  build.rs  shell.nix
completions/: neoctl.bash  synapse-adm.bash
src/: config.rs  helper.rs  lib.rs  main.rs  room.rs  user.rs  util.rs
src/cli/: mod.rs  room.rs  user.rs
