[package]
name = "neoctl"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[dependencies]
clap = "3.2.17"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
clap_complete = "3.2.4"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

[build-dependencies]
clap = "3.2.17"
clap_complete = "3.2.4"
