[package]
name = "neoctl"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[dependencies]
clap = "4.0.9"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

[build-dependencies]
clap = "4.0.9"
clap_complete = "4.0.2"
